Pilot-11 fixes: - Fix logic for showing/hiding integer picker overlays - Ensure content overflowing a ContextualPopup is hidden DCO-1.1-Signed-Off-By: Kevin Schaaf <kevin.schaaf@lge.com>

--- a/css/ContextualPopup.less
+++ b/css/ContextualPopup.less
@@ -129,3 +129,7 @@
 	background-image: @moon-contextual-up;
 }
 
+.moon-contextual-popup-client {
+	height: 100%;
+	overflow: hidden;
+}
