--- a/css/moonstone-dark.css
+++ b/css/moonstone-dark.css
@@ -2602,6 +2602,10 @@
   margin-top: -36px;
   background-image: url(../images/DarkTheme_Icons/ContextualMenu_Up.png);
 }
+.moon-contextual-popup-client {
+  height: 100%;
+  overflow: hidden;
+}
 /* TextArea.css */
 .moon-textarea {
   font-family: "MuseoSans 300";
